tests/res/traits/error_gives_with_conflict.say
// Provide-once: a trait declared by both `with` and `gives` is a collision.
trait Powered { pub fn start() { return "vroom"; } }
type Engine with Powered { init() {} }

type Car with Powered { // error: Trait 'Powered' appears in both `with` and `gives`; keep only one
    engine gives Powered;
    init() { this.engine = Engine(); }
}
